# eventweave

./: CHANGELOG.md  README.md  notes.md  pyproject.toml
.github/workflows/: python-ci.yml  python-publish.yml
src/eventweave/: __init__.py  state_machine.py
tests/: test_interweave.py  test_state_machine.py
