[project]
name = "eventweave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "hypothesis>=6.131.15",
    "mypy>=1.15.0",
    "pdbpp>=0.11.6",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.9",
]
