[project]
name = "eventweave"
version = "1.0.0"
description = "Weave multiple streams of intervals into combinations"
authors = [{name = "Max Görner", email = "5477952+MaxG87@users.noreply.github.com"}]
requires-python = ">=3.12"
dependencies = [
    "more-itertools>=10.8.0",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/MaxG87/eventweave"
Repository = "https://github.com/MaxG87/eventweave"
Issues = "https://github.com/MaxG87/eventweave"
Changelog = "https://github.com/MaxG87/eventweave/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "hypothesis>=6.151.5",
    "mypy>=1.19.1",
    "pdbpp>=0.12.0.post1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.0",
]

[tool.mypy]
warn_unreachable = true
enable_error_code = [
    "possibly-undefined"
]
strict = true

[tool.pytest.ini_options]
addopts = [
    "--cov", "src",
    "--cov-branch",
    "--cov-fail-under", "85",
    "--doctest-glob", "*.md",
    "--doctest-modules",
]

[tool.ruff]
src = [".", "src/"]

[tool.ruff.lint]
select = ["A", "B", "C", "F", "I", "ISC", "PIE", "PL", "Q", "RUF", "SIM", "TID", "W", "YTT"]
ignore = ["E", "PLC1901", "SIM117"]
mccabe.max-complexity = 6

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
